Data path fixed

--- a/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb
+++ b/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_parquet('./data/movie-genre-prediction/train.parquet', engine='pyarrow')\n",
-    "df_test = pd.read_parquet('./data/movie-genre-prediction/test.parquet', engine='pyarrow')"
+    "df_train = pd.read_parquet('https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/train.parquet', engine='pyarrow')\n",
+    "df_test = pd.read_parquet('https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/test.parquet', engine='pyarrow')"
    ]
   },
   {
