--- a/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb
+++ b/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb
@@ -32,8 +32,8 @@
    },
    "outputs": [],
    "source": [
-    "df_xlnet = pd.read_csv('./xlnet_large_probs.csv', index_col=\"id\")\n",
-    "df_roberta = pd.read_csv('./roberta_large_probs.csv', index_col=\"id\")"
+    "df_xlnet = pd.read_csv('https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/xlnet_large_probs.csv', index_col=\"id\")\n",
+    "df_roberta = pd.read_csv('https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/roberta_large_probs.csv', index_col=\"id\")"
    ]
   },
   {
