--- a/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb
+++ b/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb
@@ -65,7 +65,7 @@
    },
    "outputs": [],
    "source": [
-    "df_train = pd.read_parquet('https://github.com/amiune/amiune.github.io/raw/master/movie-genre-prediction/train.parquet', engine='pyarrow')"
+    "df_train = pd.read_parquet('https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/train.parquet', engine='pyarrow')"
    ]
   },
   {
@@ -2107,7 +2107,7 @@
     }
    ],
    "source": [
-    "df_test = pd.read_parquet('https://github.com/amiune/amiune.github.io/raw/master/movie-genre-prediction/test.parquet', engine='pyarrow')\n",
+    "df_test = pd.read_parquet('https://github.com/amiune/freecodingtour/raw/main/cursos/espanol/deeplearning/data/test.parquet', engine='pyarrow')\n",
     "df_test.head()"
    ]
   },
