--- a/cursos/espanol/deeplearning/4_finetuning.ipynb
+++ b/cursos/espanol/deeplearning/4_finetuning.ipynb
@@ -22,11 +22,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffc7e794-ed70-4e05-b09a-6e73fd91c466",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install transformers\n",
+    "!pip install datasets"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1f1f8069-b6bd-4c77-a0a7-205a30f92654",
    "metadata": {},
    "source": [
-    "!pip install datasets\n",
     "https://github.com/huggingface/datasets\n",
     "https://huggingface.co/datasets"
    ]
