--- a/cursos/espanol/deeplearning/4_finetuning.ipynb
+++ b/cursos/espanol/deeplearning/4_finetuning.ipynb
@@ -61,7 +61,8 @@
    "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
-    "ds = load_dataset('FastJobs/Visual_Emotional_Analysis')\n",
+    "ds = load_dataset('FastJobs/Visual_Emotional_Analysis', split='train')\n",
+    "ds = ds.train_test_split(test_size=0.3, shuffle=True, stratify_by_column='label')\n",
     "ds"
    ]
   },
@@ -231,7 +232,7 @@
     "def collate_fn(batch):\n",
     "    return {\n",
     "        'pixel_values': torch.stack([x['pixel_values'] for x in batch]),\n",
-    "        'labels': torch.tensor([x['label'] for x in batch])\n",
+    "        'labels': torch.tensor([x['labels'] for x in batch])\n",
     "    }"
    ]
   },
@@ -343,7 +344,7 @@
     "    data_collator=collate_fn,\n",
     "    compute_metrics=compute_metrics,\n",
     "    train_dataset=prepared_ds[\"train\"],\n",
-    "    eval_dataset=prepared_ds[\"validation\"],\n",
+    "    eval_dataset=prepared_ds[\"test\"],\n",
     "    tokenizer=processor,\n",
     ")"
    ]
@@ -385,18 +386,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics = trainer.evaluate(prepared_ds['validation'])\n",
+    "metrics = trainer.evaluate(prepared_ds['test'])\n",
     "trainer.log_metrics(\"eval\", metrics)\n",
     "trainer.save_metrics(\"eval\", metrics)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ff83c88-1a72-46a5-84ad-906713a900fd",
+   "cell_type": "markdown",
+   "id": "12b18c12-f83a-4082-90b0-d44d96d967ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Nueva imagen"
+   ]
   },
   {
    "cell_type": "code",
@@ -404,7 +405,15 @@
    "id": "85342663-5f23-4bb0-9dd0-9b47b059c4f5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from PIL import Image\n",
+    "import requests\n",
+    "from io import BytesIO\n",
+    "\n",
+    "response = requests.get('https://news.ucsb.edu/sites/default/files/images/2014/angry%20face.jpg')\n",
+    "img = Image.open(BytesIO(response.content))\n",
+    "img"
+   ]
   },
   {
    "cell_type": "code",
@@ -412,7 +421,10 @@
    "id": "51f03280-51f2-4f2f-b2f4-143690ba759a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_input = processor(img, return_tensors=\"pt\")\n",
+    "my_input"
+   ]
   },
   {
    "cell_type": "code",
@@ -420,7 +432,9 @@
    "id": "eaeb5018-db41-4074-89bd-3752b79f8832",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model(**my_input)"
+   ]
   },
   {
    "cell_type": "code",
