--- a/cursos/espanol/deeplearning/4_finetuning.ipynb
+++ b/cursos/espanol/deeplearning/4_finetuning.ipynb
@@ -28,8 +28,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install transformers\n",
+    "!pip install transformers[torch]\n",
     "!pip install datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95ffc0ec-8dba-498c-99c7-feaade212ab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
    ]
   },
   {
@@ -62,7 +73,7 @@
    "source": [
     "from datasets import load_dataset\n",
     "ds = load_dataset('FastJobs/Visual_Emotional_Analysis', split='train')\n",
-    "ds = ds.train_test_split(test_size=0.3, shuffle=True, stratify_by_column='label')\n",
+    "ds = ds.train_test_split(test_size=0.2, shuffle=True, stratify_by_column='label')\n",
     "ds"
    ]
   },
@@ -104,7 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds['train'].features['label']"
+    "labels = ds['train'].features['label']\n",
+    "labels.names"
    ]
   },
   {
@@ -195,10 +207,8 @@
    "source": [
     "def transform(example_batch):\n",
     "    # Take a list of PIL images and turn them to pixel values\n",
-    "    inputs = processor([x for x in example_batch['image']], return_tensors='pt')\n",
-    "\n",
-    "    # Don't forget to include the labels!\n",
-    "    inputs['labels'] = example_batch['label']\n",
+    "    inputs = processor([x for x in example_batch['image']], return_tensors='pt').to(device)\n",
+    "    inputs['labels'] = torch.tensor(example_batch['label']).to(device)\n",
     "    return inputs"
    ]
   },
@@ -231,8 +241,8 @@
     "\n",
     "def collate_fn(batch):\n",
     "    return {\n",
-    "        'pixel_values': torch.stack([x['pixel_values'] for x in batch]),\n",
-    "        'labels': torch.tensor([x['labels'] for x in batch])\n",
+    "        'pixel_values': torch.stack([x['pixel_values'] for x in batch]).to(device),\n",
+    "        'labels': torch.tensor([x['labels'] for x in batch]).to(device)\n",
     "    }"
    ]
   },
@@ -283,7 +293,8 @@
     "    num_labels=len(labels),\n",
     "    id2label={str(i): c for i, c in enumerate(labels)},\n",
     "    label2id={c: str(i) for i, c in enumerate(labels)}\n",
-    ")"
+    ")\n",
+    "model.to(device)"
    ]
   },
   {
@@ -304,20 +315,21 @@
     "from transformers import TrainingArguments\n",
     "\n",
     "training_args = TrainingArguments(\n",
-    "  output_dir=\"./vit-emotions\",\n",
-    "  per_device_train_batch_size=16,\n",
-    "  evaluation_strategy=\"steps\",\n",
-    "  num_train_epochs=4,\n",
-    "  fp16=True,\n",
-    "  save_steps=100,\n",
-    "  eval_steps=100,\n",
-    "  logging_steps=10,\n",
-    "  learning_rate=2e-4,\n",
-    "  save_total_limit=2,\n",
-    "  remove_unused_columns=False,\n",
-    "  push_to_hub=False,\n",
-    "  report_to='tensorboard',\n",
-    "  load_best_model_at_end=True,\n",
+    "    output_dir=\"./vit-emotions\",\n",
+    "    per_device_train_batch_size=16,\n",
+    "    evaluation_strategy=\"steps\",\n",
+    "    num_train_epochs=4,\n",
+    "    fp16=True,\n",
+    "    save_steps=100,\n",
+    "    eval_steps=100,\n",
+    "    logging_steps=10,\n",
+    "    learning_rate=2e-4,\n",
+    "    save_total_limit=2,\n",
+    "    remove_unused_columns=False,\n",
+    "    push_to_hub=False,\n",
+    "    report_to='tensorboard',\n",
+    "    load_best_model_at_end=True,\n",
+    "    dataloader_pin_memory=False,\n",
     ")"
    ]
   },
@@ -410,7 +422,7 @@
     "import requests\n",
     "from io import BytesIO\n",
     "\n",
-    "response = requests.get('https://news.ucsb.edu/sites/default/files/images/2014/angry%20face.jpg')\n",
+    "response = requests.get('https://images.unsplash.com/photo-1494790108377-be9c29b29330')\n",
     "img = Image.open(BytesIO(response.content))\n",
     "img"
    ]
@@ -422,8 +434,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_input = processor(img, return_tensors=\"pt\")\n",
-    "my_input"
+    "my_input = processor(img, return_tensors=\"pt\").to(device)\n",
+    "pixel_values = my_input.pixel_values"
    ]
   },
   {
@@ -433,7 +445,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model(**my_input)"
+    "import torch\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(pixel_values)\n",
+    "logits = outputs.logits\n",
+    "logits.shape"
    ]
   },
   {
@@ -442,15 +459,21 @@
    "id": "e113bf9f-7a28-45f0-b11a-4dc9e71177a7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prediction = logits.argmax(-1)\n",
+    "labels.names[prediction]"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98e9dca7-98c2-4781-96c9-7583131812c0",
+   "cell_type": "markdown",
+   "id": "ac482441-395f-4d23-a374-8a278a5b9bd0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Referencias:\n",
+    "\n",
+    "- https://github.com/NielsRogge/Transformers-Tutorials/tree/master/VisionTransformer\n",
+    "- https://huggingface.co/blog/fine-tune-vit"
+   ]
   },
   {
    "cell_type": "markdown",
