--- a/cursos/espanol/deeplearning/5_zero_shot_classification.ipynb
+++ b/cursos/espanol/deeplearning/5_zero_shot_classification.ipynb
@@ -71,7 +71,7 @@
    "id": "175668e2-d594-4b22-ac6c-72689ee6dbad",
    "metadata": {},
    "source": [
-    "## Without pipelines"
+    "## Sin pipelines"
    ]
   },
   {
@@ -129,14 +129,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d7f8c6e-60cd-4050-bc92-df558684a446",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "433b0a5a-2b17-4a0f-8e0b-55f7faa63900",
    "metadata": {},
@@ -146,12 +138,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b98db957-ed35-431f-841e-3a05095b0b1b",
+   "cell_type": "markdown",
+   "id": "ecb55af4-681a-4852-a47b-1aef9effbf91",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html)"
+   ]
   }
  ],
  "metadata": {
