--- a/cursos/espanol/deeplearning/4_finetuning.ipynb
+++ b/cursos/espanol/deeplearning/4_finetuning.ipynb
@@ -227,7 +227,7 @@
    "id": "539b869e-a166-49a1-90fa-10b2007ff0ec",
    "metadata": {},
    "source": [
-    "## Create function to feed the model"
+    "## Create la funcion para darle de comer al modelo"
    ]
   },
   {
@@ -251,7 +251,7 @@
    "id": "792e0201-8ced-4f91-9bcc-3309fdb22557",
    "metadata": {},
    "source": [
-    "## Load Evaluation Metric"
+    "## Elegir la metrica para evaluar el modelo"
    ]
   },
   {
@@ -274,7 +274,7 @@
    "id": "0688f59e-9b16-4cf1-866e-3485abbbc5d8",
    "metadata": {},
    "source": [
-    "## Load Model for Classification"
+    "## Cargar el modelo preentrenado para clasificacion"
    ]
   },
   {
@@ -302,7 +302,7 @@
    "id": "fbf77d08-df5c-459e-bad8-da1a75b0d92f",
    "metadata": {},
    "source": [
-    "## Train Config"
+    "## Elegir los parametros para configurar como hacer el entrenamiento"
    ]
   },
   {
@@ -338,7 +338,7 @@
    "id": "eb26945f-f694-4a4a-8305-0d856e8f9a01",
    "metadata": {},
    "source": [
-    "## Create Trainer"
+    "## Crear el objeto para entrenar el modelo"
    ]
   },
   {
@@ -366,7 +366,7 @@
    "id": "19877b91-0beb-473d-9174-56b14e4fbe5c",
    "metadata": {},
    "source": [
-    "## Train"
+    "## Entrenar"
    ]
   },
   {
@@ -388,7 +388,7 @@
    "id": "876f2aba-817e-4880-92bf-fbcf00345e56",
    "metadata": {},
    "source": [
-    "## Evaluate"
+    "## Evaluar"
    ]
   },
   {
@@ -408,7 +408,7 @@
    "id": "12b18c12-f83a-4082-90b0-d44d96d967ed",
    "metadata": {},
    "source": [
-    "## Nueva imagen"
+    "## Clasificar una imagen nueva"
    ]
   },
   {
@@ -423,8 +423,9 @@
     "from io import BytesIO\n",
     "\n",
     "response = requests.get('https://images.unsplash.com/photo-1494790108377-be9c29b29330')\n",
-    "img = Image.open(BytesIO(response.content))\n",
-    "img"
+    "image = Image.open(BytesIO(response.content))\n",
+    "image.thumbnail((600,300),Image.LANCZOS)\n",
+    "image"
    ]
   },
   {
@@ -434,7 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_input = processor(img, return_tensors=\"pt\").to(device)\n",
+    "my_input = processor(image, return_tensors=\"pt\").to(device)\n",
     "pixel_values = my_input.pixel_values"
    ]
   },
