--- a/cursos/espanol/deeplearning/5_zero_shot_classification.ipynb
+++ b/cursos/espanol/deeplearning/5_zero_shot_classification.ipynb
@@ -5,7 +5,9 @@
    "id": "1fbf6391-0776-42dd-97a1-f2faf6eeea84",
    "metadata": {},
    "source": [
-    "# Zero Shot Classification"
+    "# Zero Shot Classification\n",
+    "\n",
+    "Estos modelos llamados **zero-shot** intentan clasificar texto o imagenes en clases para los cuales no han sido entrenados, es decir, sin finetuning."
    ]
   },
   {
