--- a/cursos/espanol/datascience/4_caja_negra.ipynb
+++ b/cursos/espanol/datascience/4_caja_negra.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv(\"tabla_telefonos_train.csv\")\n",
+    "df_train = pd.read_csv(\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/tabla_telefonos_train.csv\")\n",
     "df_train"
    ]
   },
@@ -234,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test = pd.read_csv(\"tabla_telefonos_test.csv\")"
+    "df_test = pd.read_csv(\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/tabla_telefonos_test.csv\")"
    ]
   },
   {
