--- a/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
+++ b/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "Como vimos en el [Curso de ciencia de datos](https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html) tenemos cajas negras que podemos entrenar mediante una tabla de entrenamiento que contiene filas con ejemplos y su respectivo resultado esperado. Estas filas son numeros que llamamos vectores. \n",
     "\n",
-    "Que pasa si queremos entrenar una caja negra para que reconozca imagenes, por ejemplo queremos entrenar una caja negra para que reconozca si una imagen tiene un gato o un perro. En ese caso nuestra tabla de entrenamiento estara compuesta por filas que tienen una imagen en vez de numeros como vemos a continuacion:\n",
+    "Que pasa si queremos entrenar una caja negra para que reconozca imagenes, por ejemplo, queremos entrenar una caja negra para que reconozca si una imagen tiene un gato o un perro. En ese caso nuestra tabla de entrenamiento estara compuesta por filas que tienen una imagen en vez de numeros como vemos a continuacion:\n",
     "\n",
     "<div style=\"text-align:center\">\n",
     "<img src=\"img/tabla_perros_gatos.png\" width=\"700\"/>\n",
