--- a/cursos/espanol/programacion/A6_numeros_aleatorios.ipynb
+++ b/cursos/espanol/programacion/A6_numeros_aleatorios.ipynb
@@ -170,7 +170,7 @@
    "id": "7fa374a3-ccf2-4901-9a22-bce881867ee0",
    "metadata": {},
    "source": [
-    "**Esto ha sido mucho mas rapido que hacerlo manualtmente :)**"
+    "**Esto ha sido mucho mas rapido que hacerlo manualmente :)**"
    ]
   },
   {
