--- a/cursos/espanol/datascience/2_vectores.ipynb
+++ b/cursos/espanol/datascience/2_vectores.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# cargamos la tabla que habiamos guardado en un archivo de texto\n",
-    "df = pd.read_csv(\"tabla_telefonos.csv\")"
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/tabla_telefonos.csv\")"
    ]
   },
   {
