--- a/cursos/espanol/datascience/3_train_test.ipynb
+++ b/cursos/espanol/datascience/3_train_test.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "# cargamos la tabla que habiamos guardado en un archivo de texto\n",
-    "df = pd.read_csv(\"tabla_telefonos2.csv\")"
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/tabla_telefonos2.csv\")"
    ]
   },
   {
