Added Blockly link

--- a/cursos/espanol/datascience/A0_intro.ipynb
+++ b/cursos/espanol/datascience/A0_intro.ipynb
@@ -24,7 +24,8 @@
     "Una vez hecho esto podemos utilizar nuestro conocimiento de programacion para generar graficos y estadisticas que nos permitan descubrir informacion extra que puede ser interesante. En esta unidad veremos las siguientes herramientas que disponemos con python para analizar datos:\n",
     "- Graficos con Seaborn y Matplotlib\n",
     "- Limpieza y manipulacion de datos con Pandas y Numpy\n",
-    "- Profiling con https://pypi.org/project/pandas-profiling/"
+    "- Profiling: https://github.com/fbdesignpro/sweetviz, https://github.com/ydataai/ydata-profiling, \n",
+    "- Test de distribuciones de probabilidad: https://github.com/cokelaer/fitter"
    ]
   },
   {
