--- a/cursos/espanol/programacion/E3_fstrings.ipynb
+++ b/cursos/espanol/programacion/E3_fstrings.ipynb
@@ -49,6 +49,14 @@
     "    f'Ocupacion: {ocupacion}'\n",
     ")\n",
     "\n",
+    "print(texto)\n",
+    "\n",
+    "texto = f'''Nombre: {nombre} \n",
+    "Edad: {edad}\n",
+    "Ocupacion: {ocupacion}'''\n",
+    "\n",
+    "edad = 50\n",
+    "\n",
     "print(texto)"
    ]
   },
@@ -69,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Python usa {{ }} para evaluar variables en f-strings')\n",
+    "print(f'Python usa {{}} para evaluar variables en f-strings')\n",
     "print(f'Esto es \\'genial\\'')"
    ]
   },
@@ -92,7 +100,7 @@
    "source": [
     "valor1 = 4.8\n",
     "print(f'{valor1:10}')\n",
-    "print(f'{valor1:05}')"
+    "print(f'{valor1:010}')"
    ]
   },
   {
@@ -103,10 +111,10 @@
    "outputs": [],
    "source": [
     "valor2 = 100\n",
-    "print(f'{valor2:05}')\n",
-    "print(f'{valor1:*<5}')\n",
-    "print(f'{valor1:.>5}')\n",
-    "print(f'{valor1:.^5}')"
+    "print(f'{valor2:05}') # rellenar con N ceros a la izq\n",
+    "print(f'{valor2:0<10}') # rellenar con un caracter a la izquierda\n",
+    "print(f'{valor1:.>10}') # rellenar con un caracter a la derecha\n",
+    "print(f'{valor1:-^20}') # rellena con un caracter y centra el texto"
    ]
   },
   {
@@ -143,9 +151,9 @@
     "valor5 = 1/7\n",
     "\n",
     "print(f'{valor5}')\n",
-    "print(f'{valor5:.2}')\n",
-    "print(f'{valor5:20.2%}')\n",
-    "print(f'{valor5:20.2}%')"
+    "print(f'{valor5:.3f}') # formato con una cantidad especifica de decimales\n",
+    "print(f'{valor5:.3e}') # notacion cientifica\n",
+    "print(f'{valor5:20.4%}') # formato porcentaje"
    ]
   },
   {
@@ -165,16 +173,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime\n",
+    "from datetime import datetime\n",
     "\n",
-    "ahora = datetime.datetime.now()\n",
+    "ahora = datetime.now()\n",
     "\n",
+    "print(f'{ahora}')\n",
     "print(f'{ahora:%Y-%m-%d %H:%M}')\n",
-    "print(f'{ahora:%A}')\n",
-    "print(f'{ahora:%a}')\n",
-    "print(f'{ahora:%B}')\n",
-    "print(f'{ahora:%j}')\n",
-    "print(f'{ahora:%w}')"
+    "print(f'{ahora:%A}') # Dia de la semana con letras\n",
+    "print(f'{ahora:%a}') # Dia de la semana con letras abreviado\n",
+    "print(f'{ahora:%B}') # Mes con letras\n",
+    "print(f'{ahora:%j}') # Dia del año\n",
+    "print(f'{ahora:%W}') # Semana del año\n",
+    "print(f'{ahora:%2}') # Semana del mes"
    ]
   },
   {
@@ -194,18 +204,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "valor6 = 16\n",
+    "valor6 = 2\n",
     "\n",
-    "# hexadecimal en minusculas\n",
+    "# hexadecimal en minusculas (0 1 2 3 4 5 6 7 8 9 a b c d e f)\n",
     "print(f'{valor6:x}')\n",
-    "# hexadecimal en mayusculas\n",
+    "# hexadecimal en mayusculas (0 1 2 3 4 5 6 7 8 9 A B C D E F)\n",
     "print(f'{valor6:X}')\n",
-    "# octal\n",
+    "# octal (0 1 2 3 4 5 6 7)\n",
     "print(f'{valor6:o}')\n",
-    "# binaria\n",
+    "# binaria (0 1)\n",
     "print(f'{valor6:b}')\n",
     "# cientifica\n",
-    "print(f'{valor6:e}')"
+    "print(f'{valor6:e}') \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
