--- a/cursos/espanol/programacion/E4_list_comprehension.ipynb
+++ b/cursos/espanol/programacion/E4_list_comprehension.ipynb
@@ -14,18 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "869ab97b-6bd8-48c3-81b1-0bdb6b00ffd8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lista = [1,2,3,4,5,6,7,8,9]\n",
     "nueva_lista = []\n",
@@ -44,21 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8cfbdf10-0911-4348-8a1e-5d4110adfaf3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lista = [1,2,3,4,5,6,7,8,9]\n",
-    "nueva_lista = [ x+10 for x in lista]\n",
+    "nueva_lista = [x+10 for x in lista]\n",
     "print(nueva_lista)"
    ]
   },
@@ -118,18 +102,7 @@
     "id": "oKqKr--x83lE",
     "outputId": "6de05d63-defb-4f85-9b1b-cf93395a10d5"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
     "\n",
@@ -167,24 +140,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f8b2dac9-a701-4164-acbe-e30a2e7477d5",
    "metadata": {
     "id": "VD2MC_fP9QZa",
     "outputId": "627646be-a932-4cf5-ab03-7f1ec0483804"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 4, 6, 8, 10]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#@title Solucion Ejercicio 2 {display-mode:\"form\"}\n",
     "\n",
@@ -228,18 +190,7 @@
     "id": "XLxceTsf-Cz8",
     "outputId": "c68d8507-43bb-4862-d13d-4732d71d1571"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 9, 25, 49, 81]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#@title Solucion Ejercicio 3 {display-mode:\"form\"}\n",
     "\n",
@@ -283,18 +234,7 @@
     "id": "ORjBahdGrB9X",
     "outputId": "0ebb14b7-0ce4-4d9c-d3ba-579c7f7891a3"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 4, 27, 16, 125, 36, 343, 64, 729, 100]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#@title Solucion Ejercicio 4 {display-mode:\"form\"}\n",
     "\n",
@@ -338,23 +278,12 @@
     "id": "Rv75TVYgrB9Y",
     "outputId": "efe6895b-0eec-495c-92b4-73b9cc350e46"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Pand', 'Pasa', 'Papa', 'Poll', 'Pera', 'PanX', 'PXXX']"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#@title Solucion Ejercicio 5 {display-mode:\"form\"}\n",
     "\n",
     "a = [\"Panda\",\"Pasa\",\"Papa\",\"Pollo\",\"Pera\",\"Pan\",\"P\"]\n",
-    "[x[:4] if len(x) > 4 else (x + \"XXXX\")[:4] if len(x) < 4 else x for x in a]"
+    "[x[:4] if len(x) > 4 else (x + \"XXXX\")[:4] for x in a]"
    ]
   },
   {
@@ -396,18 +325,7 @@
     "id": "9We3s5jcrB9Y",
     "outputId": "aed9a089-8ca6-4ced-9dd4-8a829725f9de"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['XX', 'A', 'ZZZZZ', '000000', '111', 'pppp']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#@title Solucion Ejercicio 6 {display-mode:\"form\"}\n",
     "\n",
@@ -460,26 +378,7 @@
     "id": "E4aXJpe_rB9Z",
     "outputId": "3b0d8e41-4459-410a-e435-0bf06fe581c9"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['PIEDRA-PIEDRA',\n",
-       " 'PIEDRA-PAPEL',\n",
-       " 'PIEDRA-TIJERA',\n",
-       " 'PAPEL-PIEDRA',\n",
-       " 'PAPEL-PAPEL',\n",
-       " 'PAPEL-TIJERA',\n",
-       " 'TIJERA-PIEDRA',\n",
-       " 'TIJERA-PAPEL',\n",
-       " 'TIJERA-TIJERA']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#@title Solucion Ejercicio 7 {display-mode:\"form\"}\n",
     "\n",
