--- a/cursos/espanol/programacion/E4_list_comprehension.ipynb
+++ b/cursos/espanol/programacion/E4_list_comprehension.ipynb
@@ -68,6 +68,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f6474788-5153-48a6-9623-4d5f83837313",
+   "metadata": {},
+   "source": [
+    "## Ejemplos:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6b04012-ff6b-4b4f-97db-b242e8de1a51",
+   "metadata": {},
+   "source": [
+    "### Ejemplo 1:\n",
+    "\n",
+    "Convertir una lista de enteros a una lista de strings:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "86f9dc15-d5c6-4eee-955a-334d3df4d4dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '4', '5', '6', '7', '8', '9']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [1,2,3,4,5,6,7,8,9]\n",
+    "nueva_lista = [str(x) for x in lista]\n",
+    "print(nueva_lista)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "99aaa17f-5edc-427e-8861-223d727b64a3",
    "metadata": {
     "id": "OnoVWz-z87V6"
