--- a/cursos/espanol/programacion/E4_list_comprehension.ipynb
+++ b/cursos/espanol/programacion/E4_list_comprehension.ipynb
@@ -81,27 +81,94 @@
    "source": [
     "### Ejemplo 1:\n",
     "\n",
-    "Convertir una lista de enteros a una lista de strings:"
+    "Puedo usar funciones por ejemplo para convertir una lista de enteros a una lista de strings:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "86f9dc15-d5c6-4eee-955a-334d3df4d4dc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1', '2', '3', '4', '5', '6', '7', '8', '9']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lista = [1,2,3,4,5,6,7,8,9]\n",
     "nueva_lista = [str(x) for x in lista]\n",
     "print(nueva_lista)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f15b80b5-6fc5-4029-99f3-3a996c793c80",
+   "metadata": {},
+   "source": [
+    "### Ejemplo 2:\n",
+    "\n",
+    "Puedo usar if para seleccionar solo ciertos elementos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9889716-d7c7-449a-9930-aadd12e2a7c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [1,2,3,4,5,6,7,8,9]\n",
+    "nueva_lista = [x for x in lista if x>=3 and x<=7]\n",
+    "print(nueva_lista)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "735e8467-885c-4d93-967f-99015294af1d",
+   "metadata": {},
+   "source": [
+    "### Ejemplo 3:\n",
+    "\n",
+    "Puedo usar if else para hacer cosas distintas sobre distintos elementos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf4a4a62-c313-42d5-91be-34716485eac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [1,2,3,4,5,6,7,8,9]\n",
+    "nueva_lista = [0 if x<5 else 1 for x in lista]\n",
+    "print(nueva_lista)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2fe6ac5-78e4-4377-a4c8-9a50b5390895",
+   "metadata": {},
+   "source": [
+    "### Ejemplo 4:\n",
+    "\n",
+    "Puedo anidar fors:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9ace8ff-13b1-4a7a-b6d7-6ff37641a3b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista1 = [1,2,3]\n",
+    "lista2 = [4,5,6]\n",
+    "nueva_lista = [x*y for x in lista1 for y in lista2]\n",
+    "print(nueva_lista)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4482d32-3a31-4b9e-b1ef-378a667c356c",
+   "metadata": {},
+   "source": [
+    "## Ejercicios:"
    ]
   },
   {
