--- a/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb
+++ b/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb
@@ -1888,9 +1888,10 @@
     "\n",
     "a = np.array([[1 , 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]])\n",
     "def isprime(x):\n",
-    "    return x in [1,2,3]\n",
+    "    return x in [2,3,5,7,11]\n",
     "\n",
-    "isprime_vectorized = np.vectorize(lambda x: x in [2,3,5,7,11])\n",
+    "#isprime_vectorized = np.vectorize(lambda x: x in [2,3,5,7,11])\n",
+    "isprime_vectorized = np.vectorize(isprime)\n",
     "prime_indexes = isprime_vectorized(a)\n",
     "a[prime_indexes] = 0"
    ]
