--- a/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb
+++ b/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb
@@ -1903,7 +1903,25 @@
    "source": [
     "### Ejercicio 9.1:\n",
     "\n",
-    "Vectorizar el siguiente bucle for:\n",
+    "Dada la siguiente operacion vectorial:\n",
+    "\n",
+    "$$ a = \\begin{bmatrix}\n",
+    "1 & 2 & 3 & 4 \\\\\n",
+    "5 & 6 & 7 & 8 \\\\\n",
+    "9 & 10 & 11 & 12 \\\\\n",
+    "\\end{bmatrix} $$\n",
+    "\n",
+    "$$ b = \\begin{bmatrix}\n",
+    "0 \\\\\n",
+    "1 \\\\\n",
+    "2 \\\\\n",
+    "3 \\\\\n",
+    "4 \\\\\n",
+    "\\end{bmatrix} $$\n",
+    "\n",
+    "$$ c_{ij} = a_{ij} + b_j $$\n",
+    "\n",
+    "Vectorizar el siguiente bucle for que la implementa:\n",
     "```python\n",
     "a = np.array([[1 , 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]], dtype=np.int32)\n",
     "b = np.array([0,1,2,4], dtype=np.int32)\n",
@@ -1912,6 +1930,10 @@
     "    for j in range(len(a[0])):\n",
     "        c[i][j] = a[i][j] + b[j]\n",
     "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "y que el resultado sea el siguiente:\n",
     "```\n",
     "[[ 1  3  5  8]\n",
@@ -1963,7 +1985,25 @@
    "source": [
     "### Ejercicio 9.2:\n",
     "\n",
-    "Vectorizar el siguiente bucle for:\n",
+    "Dada la siguiente operacion vectorial:\n",
+    "\n",
+    "$$ a = \\begin{bmatrix}\n",
+    "1 & 2 & 3 & 4 \\\\\n",
+    "5 & 6 & 7 & 8 \\\\\n",
+    "9 & 10 & 11 & 12 \\\\\n",
+    "\\end{bmatrix} $$\n",
+    "\n",
+    "$$ b = \\begin{bmatrix}\n",
+    "0 \\\\\n",
+    "1 \\\\\n",
+    "2 \\\\\n",
+    "\\end{bmatrix} $$\n",
+    "\n",
+    "$$ c_{ij} = a_{ij} + b_i $$\n",
+    "\n",
+    "\n",
+    "\n",
+    "Vectorizar el siguiente bucle for que la implementa:\n",
     "```python\n",
     "a = np.array([[1 , 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]], dtype=np.int32)\n",
     "b = np.array([0,1,2], dtype=np.int32)\n",
